[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://addons/plugin_manager/ui/addon_row.gd" id="1"]

[node name="AddonRow" type="HBoxContainer"]
theme_override_constants/separation = 12
script = ExtResource("1")

[node name="NameLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "addon_name"

[node name="VersionLabel" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "0.0.0"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
text = "..."

[node name="ProgressBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="UpdateButton" type="Button" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Update"
